Connect configured drivetrains, electric drive units and engine internals
Preserve individual used components across migration, crafting and service; route each powered axle through its installed parts and separate regen from hydraulic faults. Bind Blender geometry to component visibility, add native transfer/recipe/renderer tests, fix independent battery boundary audit, and document version 0.7.0. Include the merged full-stack QA history.